Fix spacing fish project

--- a/projects/pagelayout/icecreamfish.css
+++ b/projects/pagelayout/icecreamfish.css
@@ -2,7 +2,7 @@ body {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 font-weight: 300;
 font-size: larger;
-    background-color: rgb(82, 129, 1);
+    background-color: rgb(0, 118, 48);
 
 }
 header h1 {
